Fixed image to appear better on mobile. Changed social media buttons hover behaviors.

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -263,7 +263,7 @@ section.success a.active {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #464646;
+    border: solid 2px #FFF;
     color: #FFF;
     background: #464646;
 }
@@ -487,7 +487,7 @@ footer .footer-below {
     width: 2.28571429em;
 }
 
-.twitter-outline:hover {
+.twitter-outline:hover .fa-twitter {
     color: #55ACEE;
 }
 
@@ -503,7 +503,7 @@ footer .footer-below {
     color: #FFF;
 }
 
-.fa-linkedin::before:hover {
+.linkedin-outline:hover .fa-linkedin {
     color:#1985BC;
 }
 
@@ -649,3 +649,11 @@ li a:focus {
         text-align: inherit;
     }
 }
+
+@media(max-width: 767px) {
+    .img-circle {
+        width: 70%;
+        height: 70%;
+    }
+}
+
